# tonal-hortator

./: .cursor-config.json  .cursor-rules.yaml  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bump_version.py  cleanup_embeddings.py  config.yml  migrate_schema.py  parse_library.py  pyproject.toml  regenerate_embeddings.py  requirements-dev.txt  requirements.txt  setup.py  test_feedback_system.py  test_playlist_variety.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  release.yml
tonal_hortator/: __init__.py
tonal_hortator/cli/: __init__.py  __init__.py.bak  main.py  playlist_cli.py
tonal_hortator/core/: __init__.py  artist_distributor.py  config.py  deduplication.py  embeddings.py  llm_client.py  models.py  ollama_embeddings.py  playlist_generator.py  playlist_output.py  query_processor.py  track_embedder.py
tonal_hortator/core/database/: __init__.py  database_manager.py  metadata_mappings.py  queries.py  query_helpers.py  schema.py
tonal_hortator/core/embeddings/: embeddings.py  regenerate_embeddings.py  track_embedder.py
tonal_hortator/core/feedback/: __init__.py  feedback_manager.py  feedback_report.py  feedback_validator.py  training_data_aggregator.py
tonal_hortator/core/llm/: llm_client.py  update_llm_prompt.py
tonal_hortator/core/playlist/: __init__.py  feedback_service.py  llm_query_parser.py  playlist_deduplicator.py  playlist_exporter.py  playlist_filter.py  playlist_generator.py  playlist_utils.py
tonal_hortator/tests/: __init__.py  run_tests.py  test_artist_distributor.py  test_cli.py  test_core_functionality.py  test_csv_ingester.py  test_deduplication.py  test_embedding_updater.py  test_embeddings.py  test_feedback_manager.py  test_library_parser.py  test_llm_client.py  test_llm_query_parser.py  test_loader.py  test_metadata_reader.py  test_playlist_deduplicator.py  test_playlist_exporter.py  test_playlist_filter.py  test_playlist_generator.py  test_playlist_generator_comprehensive.py  test_playlist_output.py  test_track_embedder.py  test_utils.py
tonal_hortator/utils/: __init__.py  apple_music.py  csv_ingester.py  embedding_updater.py  library_parser.py  loader.py  metadata_reader.py
